[package]
name = "nnnoiseless"
version = "0.3.3"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/jneem/nnnoiseless"
description = "Audio denoising, derived from Xiph's RNNoise library"
autobenches = false
exclude = [ "test_data/*" ]

[features]
default = ["bin"]

bin = ["anyhow", "clap", "dasp_interpolate", "dasp_ring_buffer", "hound"]
capi = ["libc"]

[lib]
bench = false

[[bin]]
name = "nnnoiseless"
path = "src/nnnoiseless.rs"
bench = false
required-features = ["bin"]

[[bench]]
name = "sin"
harness = false

[dependencies]
anyhow = { version = "1.0.32", optional = true }
clap = { version = "2.33.2", optional = true }
dasp_interpolate = { version = "0.11.0", features = ["sinc"], optional = true }
dasp_ring_buffer = { version = "0.11.0", optional = true }
hound = { version = "3.4.0", optional = true }
once_cell = "1.4.0"
rustfft = "6.0"
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.3.3"
static_assertions = "1.1.0"

[package.metadata.capi]
header_name = "rnnoise"
