[package]
name = "nnnoiseless"
version = "0.4.0"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/jneem/nnnoiseless"
description = "Audio denoising, derived from Xiph's RNNoise library"
autobenches = false
exclude = [ "test_data/*" ]
default-run = "nnnoiseless"

[features]
default = ["bin"]

bin = ["anyhow", "clap", "dasp_interpolate", "dasp_ring_buffer", "hound"]
train = ["anyhow", "clap", "glob", "hdf5", "hound", "ndarray", "rand"]
capi = ["libc"]

[lib]
bench = false

[[bin]]
name = "nnnoiseless"
path = "src/nnnoiseless.rs"
bench = false
required-features = ["bin"]

[[bin]]
name = "train"
path = "src/training.rs"
bench = false
required-features = ["train"]

[[bench]]
name = "sin"
harness = false

[dependencies]
anyhow = { version = "1.0.55", optional = true }
clap = { version = "3.1.1", features = ["cargo"], optional = true }
dasp_interpolate = { version = "0.11.0", features = ["sinc"], optional = true }
dasp_ring_buffer = { version = "0.11.0", optional = true }
glob = { version = "0.3.0", optional = true }
hdf5 = { version = "0.8.1", optional = true }
hound = { version = "3.4.0", optional = true }
libc = { version = "0.2.119", optional = true }
# This needs to be in sync with the version from hdf5; they don't re-export it.
ndarray = { version = "0.15.4", optional = true }
once_cell = "1.9.0"
rand = { version = "0.8.5", optional = true }
rustfft = "6.0.1"

[dev-dependencies]
criterion = "0.3.5"
static_assertions = "1.1.0"

[package.metadata.capi]
header_name = "rnnoise"
